refactored JFX dummy application and learned how to run it from IntelliJ